--- a/src/shared/components/admin-navbar/admin-navbar.component.html
+++ b/src/shared/components/admin-navbar/admin-navbar.component.html
@@ -20,7 +20,7 @@
           class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
           ><i class="fas fa-search"></i
         ></span>
-            <p class="text-white">Cristia Carreto </p>
+            <p class="text-white"> </p>
       </div>
     </form>
     <!-- User -->
