--- a/src/shared/components/cards/card-areas/card-areas.component.css
+++ b/src/shared/components/cards/card-areas/card-areas.component.css
@@ -109,45 +109,53 @@ body {
     border: 2px solid white;
     /* Añade un borde blanco para mayor visibilidad */
 }
-
+/*Aqui inician el estilo de las tablas */
 .table-header {
     background-color: #4f0d6b;
-    color: #ffffff;
+    color: #ffffff; 
     height: 32px;
-}
-
-
-/* Table Cells */
-
-.table-cell {
-    padding: 0.75rem;
-    /* Padding for cells */
+  }
+  
+  
+  .table-cell {
+    padding: 0.75rem; 
     text-align: left;
-    /* Text alignment */
     font-size: 0.75rem;
-    /* Font size */
-    white-space: nowrap;
-    /* Prevent text wrapping */
-}
-
-.custom-table-header {
+    white-space: nowrap; 
+  }
+  .custom-table-header {
     border-t: 0;
     border-l: 0;
     border-right: 0;
     font-size: 0.5rem;
     font-weight: bold;
     padding: 4px;
-}
-
-.custom-table-row {
+  }
+  
+  .custom-table-row {
     border-bottom: 1px solid #d2c9d8;
-    /* Cambia el color a tu preferencia */
-}
-
-.custom-table-row:hover {
+  }
+  .custom-table-row:hover {
     background-color: #ddd1dd;
-    /* Cambia el color a tu preferencia */
-}
+  }
+  
+  .custom-th {
+    border-top: 0;
+    padding-left: 6px;
+    vertical-align: middle;
+    border-left: 0;
+    height: 42px;
+    border-right: 0;
+    font-size: 0.90rem; 
+    white-space: nowrap;
+    padding: 4px;
+    text-align: center;
+  }
+  
+  .custom-tr {
+    height: 55px;
+  }
+
 .error-message {
     color: #e53e3e;
     font-size: 0.875rem;
