--- a/src/shared/components/cards/card-areas/card-areas.component.html
+++ b/src/shared/components/cards/card-areas/card-areas.component.html
@@ -59,7 +59,7 @@
                                       <div class="flex flex-wrap">
                                           <div class="w-full  px-4">
                                               <div class="relative w-full mb-6">
-                                                  <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="grid-password">
+                                                  <label class="block text-blueGray-600 text-xs font-bold mb-2" htmlFor="grid-password">
                         Nombre*:
                         </label>
                                                   <input formControlName="nombre" required id="nombre" type="text" class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" value="">
@@ -78,7 +78,7 @@
                                           </div>
                                           <div class="w-full px-4">
                                               <div class="relative w-full mb-3">
-                                                  <label class="block uppercase text-blueGray-600 text-xs font-bold " htmlFor="grid-password">
+                                                  <label class="block text-blueGray-600 text-xs font-bold " htmlFor="grid-password">
                         Descripción*:
                         </label>
                                                   <textarea id="descripcion" name="descripcion" rows="4" class="custom-textarea border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" formControlName="descripcion"></textarea>
@@ -100,7 +100,7 @@
                                           <div class="w-full px-4">
                                               <div class="relative w-full mb-3">
                                                   <label class="lavel" htmlFor="grid-password">
-                                                    ESTATUS*
+                                                    Estatus*
                                                 </label>
                                                   <label class="relative inline-flex items-center cursor-pointer">
                                                     <input [(ngModel)]="toggleValue" type="checkbox" value="" class="sr-only peer" formControlName="estatus" [required]="true">
@@ -132,10 +132,10 @@
           </div>
 
       </div>
-      <div class="block w-full overflow-x-auto">
+      <div class="block w-full overflow-x-auto"> 
           <!-- Projects table -->
-          <table class="w-full bg-transparent border-collapse">
-              <thead>
+          <table class="items-center w-full bg-transparent border-collapse">
+            <thead class="table-header">
                   <tr class="text-left ">
                       <th class="table-header pl-8"> Nombre </th>
                       <th class="table-header"> Descripción </th>
@@ -143,8 +143,8 @@
                       <th class="table-header"> Acciones </th>
                   </tr>
               </thead>
-              <tbody>
-                  <tr *ngFor="let areasadscripcion of areasadscripcion">
+              <tbody class="custom-th">
+                <tr class="custom-tr" *ngFor="let areasadscripcion of areasadscripcion; let i = index" [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">
                       <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">{{ areasadscripcion.nombre }}</td>
                       <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">{{ areasadscripcion.descripcion }}</td>
                       <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-sm whitespace-nowrap p-4 font-semibold">
