--- a/src/app/pages/panel/mapaben/mapaben.component.html
+++ b/src/app/pages/panel/mapaben/mapaben.component.html
@@ -1,1 +1,6 @@
-<p>mapaben works!</p>
+<div class="flex flex-wrap">
+    <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+      <app-card-bar-mapa></app-card-bar-mapa>
+    </div>
+  </div>
+  
