--- a/src/app/pages/panel/evidencia/evidencia.component.html
+++ b/src/app/pages/panel/evidencia/evidencia.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap">
-    <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4">
+    <div class="w-full xl:w-12/12 mb-12 xl:mb-0 px-4" style="z-index: 2;">
       <app-card-bar-evidencia></app-card-bar-evidencia>
     </div>
 </div>
