--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
@@ -1,1 +1,13 @@
-<p>card-bar-mapa works!</p>
+<div class="flex flex-wrap">
+    <div class="w-full px-4 map-container">
+      <div
+        class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded"
+      >
+        <div
+          id="map-canvas"
+          class="relative w-full rounded h-400-px md:h-600-px lg:h-800-px"
+          data-lat="19.34889526616767"
+          data-lng="-98.19011296839722"
+        ></div>
+      </div>
+    </div>
