--- a/src/app/pages/panel/nube-palabras/nube-palabras.component.html
+++ b/src/app/pages/panel/nube-palabras/nube-palabras.component.html
@@ -1,9 +1,8 @@
-
-<div class="flex flex-wrap">
-  <div class="w-full px-4">
-    <div class="flex">
-      <script src="https://code.highcharts.com/highcharts.js"></script>
-      <script src="https://code.highcharts.com/modules/wordcloud.js"></script>
+<div>
+  <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+    <div class=""></div>
+    <div class="">
+      <h1 style="text-align:center"></h1>
       <div id="container"></div>
     </div>
   </div>
